--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -10,6 +10,8 @@ module:
   color: 0
   comment: 0
   config: 0
+  consumer_image_styles: 0
+  consumers: 0
   contact: 0
   contextual: 0
   datetime: 0
@@ -19,14 +21,23 @@ module:
   field: 0
   field_ui: 0
   file: 0
+  file_mdm: 0
+  filefield_paths: 0
   filter: 0
   help: 0
   history: 0
   image: 0
+  imageapi_optimize: 0
+  imageapi_optimize_avif: 0
+  imageapi_optimize_resmushit: 0
+  imagemagick: 0
+  jsonapi: 0
+  jsonapi_extras: 0
   link: 0
   menu_link_content: 0
   menu_ui: 0
   mylearning: 0
+  mytodolist: 0
   node: 0
   options: 0
   page_cache: 0
@@ -34,7 +45,9 @@ module:
   path_alias: 0
   rdf: 0
   search: 0
+  serialization: 0
   shortcut: 0
+  sophron: 0
   system: 0
   taxonomy: 0
   text: 0
@@ -43,6 +56,7 @@ module:
   update: 0
   user: 0
   views_ui: 0
+  webp: 0
   views: 10
   standard: 1000
 theme:
